# D-YAML

./: .codecov.yml  .editorconfig  .gitignore  .travis.yml  CHANGES.html  CHANGES.md  CHANGES.rst  CHANGES.txt  Makefile  README.html  README.md  README.rst  appveyor.yml  autoddoc.cfg  autoddoc.py  cdc.d  dub.json  hmod.cfg  meson.build  output.yaml  package.json  unittest.d  yaml.d
.github/workflows/: d.yml
contrib/: mir-algorithm.wrap
contrib/subprojects/: tinyendian.wrap
doc/doctrees/: environment.pickle  index.doctree
doc/doctrees/articles/: spec_differences.doctree
doc/doctrees/tutorials/: custom_types.doctree  getting_started.doctree  yaml_syntax.doctree
doc/html/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: index.txt
doc/html/_static/: default.css
doc/html/api/: dyaml.constructor.html  index.html  (+14 more)
docs/: index.md
docs/articles/: spec_differences.md
docs/tutorials/: custom_types.md  getting_started.md  yaml_syntax.md
docsrc/: Makefile  autoddoc_index.dd  conf.py
docsrc/articles/: spec_differences.rst
docsrc/tutorials/: custom_types.rst  getting_started.rst
dyaml/: anchor.d  composer.d  constructor.d  dumper.d  emitter.d  encoding.d  escapes.d  event.d  exception.d  fastcharsearch.d  flags.d  linebreak.d  loader.d  node.d  parser.d  queue.d  reader.d  representer.d  resolver.d  scanner.d  serializer.d  sharedobject.d  tag.d  tagdirectives.d  token.d  util.d  zerostring.d
dyaml/std/: variant.d
examples/constructor/: Makefile  dub.json  input.yaml  main.d
examples/getting_started/: dub.json  input.yaml  main.d
examples/mir-serde/: dub.sdl
examples/representer/: Makefile  dub.json  main.d
examples/resolver/: Makefile  dub.json  input.yaml  main.d
examples/tojson/: dub.json
examples/tokens/: dub.json
examples/yaml_bench/: Makefile  dub.json  yaml_bench.d
examples/yaml_gen/: Makefile  config.yaml  dub.json  yaml_gen.d
examples/yaml_stats/: Makefile  dub.json  small.yaml  yaml_stats.d
source/: dyaml  yaml.d
source/dyaml/: all.d  composer.d  constructor.d  dumper.d  emitter.d  escapes.d  event.d  exception.d  fastcharsearch.d  flags.d  hacks.d  linebreak.d  loader.d  node.d  nogcutil.d  package.d  parser.d  queue.d  reader.d  representer.d  resolver.d  scanner.d  schema.d  serializer.d  stream.d  streamcompat.d  style.d  tag.d  testcommon.d  testcompare.d  testconstructor.d  testemitter.d  testerrors.d  testinputoutput.d  testreader.d  testrepresenter.d  testresolver.d  testtokens.d  tinyendian.d  token.d  (+2 more)
subprojects/: tinyendian.wrap
test/: a-nasty-libyaml-bug.yaml  bmpchars.yaml  colon-in-flow-context.yaml  composer.yaml  construct.yaml  document-separator-in-quoted-scalar.yaml  duplicate-errors.yaml  emit-block-scalar-in-simple-key-context-bug.yaml  emojianchor.yaml  empty-document-bug.yaml  expected.yaml  fetch-complex-value-bug.yaml  forbidden.yaml  invalid.yaml  multiline.yaml  no-block-collection-end.yaml  no-block-mapping-end.yaml  no-document-start.yaml  no-flow-mapping-end.yaml  no-flow-sequence-end.yaml  no-node.yaml  question-mark-in-flow-context.yaml  recursive-alias.yaml  remove-possible-simple-key-bug.yaml  run-parser-crash-bug.yaml  scan-document-end-bug.yaml  scan-line-break-bug.yaml  sloppy-indentation.yaml  unclosed-bracket.yaml  unclosed-quoted-scalar.yaml  undefined-anchor.yaml  undefined-tag-handle.yaml
test/data/: bmpchars.canonical  bmpchars.data  colon-in-flow-context.canonical  colon-in-flow-context.data  construct-bool.data  construct-custom.data  construct-timestamp.code  construct-timestamp.data  duplicate-mapping-key.loader-error  emojianchor.canonical  question-mark-in-flow-context.canonical  question-mark-in-flow-context.data  timestamp-bugs.data  uri.data  uri.detect
test/spec 1.1/: spec-02-01.yaml  spec-02-02.yaml  spec-02-03.yaml  spec-02-04.yaml  spec-02-05.yaml  spec-02-06.yaml  spec-02-07.yaml  spec-02-08.yaml  spec-02-09.yaml  spec-02-10.yaml  spec-02-11.yaml  spec-02-12.yaml  spec-02-13.yaml  spec-02-14.yaml  spec-02-15.yaml  spec-02-16.yaml  spec-02-17.yaml  spec-02-18.yaml  spec-02-19.yaml  spec-02-20.yaml  spec-02-21.yaml  spec-02-22.yaml  spec-02-23.yaml  spec-02-24.yaml  spec-02-25.yaml  spec-02-26.yaml  spec-02-27.yaml  spec-02-28.yaml  spec-05-01-utf8.yaml  spec-05-02-utf8.yaml  spec-05-03.yaml  spec-05-04.yaml  spec-05-05.yaml  spec-05-06.yaml  spec-05-07.yaml  spec-05-08.yaml  spec-05-09.yaml  spec-05-10.yaml  spec-05-11.yaml  spec-05-12.yaml  (+82 more)
test/src/: common.d  compare.d  constructor.d  emitter.d  errors.d  inputoutput.d  reader.d  representer.d  resolver.d  tokens.d
testsuite/: dub.json
testsuite/source/: app.d
(+47 files in other folders)
